--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ bs4==0.0.1
 cachetools==3.1.1
 certifi==2019.11.28
 chardet==3.0.4
+Click==7.0
 ffmpeg-python==0.2.0
+Flask==1.1.1
 future==0.18.2
 google-api-core==1.14.3
 google-auth==1.7.1
@@ -18,7 +20,12 @@ google-resumable-media==0.5.0
 googleapis-common-protos==1.6.0
 grpcio==1.25.0
 idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.3
+MarkupSafe==1.1.1
 mutagen==1.43.0
+praw==6.4.0
+prawcore==1.0.1
 protobuf==3.11.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
@@ -28,4 +35,7 @@ rsa==4.0
 selenium==3.141.0
 six==1.13.0
 soupsieve==1.9.5
+update-checker==0.16
 urllib3==1.25.7
+websocket-client==0.56.0
+Werkzeug==0.16.0
